# ttslearn

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pylint.yml  python-app.yml
config/: acoustic_dnn.yaml  acoustic_rnn.yaml  duration_dnn.yaml  duration_rnn.yaml  sample.yaml  synthesis.yaml
scripts/: 01_preprocess_duration.py  02_preprocess_acoutic.py  03_preprocess_fit_normalize.py  04_train.py  05_test.py  06_synthesis.py  _preprocess_fit.py  _preprocess_normalize.py
src/ttslearn/criterions/: distance.py
src/ttslearn/models/: basemodel.py  dnntts.py
src/ttslearn/synthesis/: gen.py  multistream.py
src/ttslearn/train/: base_tester.py  base_trainer.py  optimizer.py  tester.py  trainer.py
src/ttslearn/utils/: dsp.py  io.py  paddding.py  utils.py
