[tool.poetry]
name = "ttslearn"
version = "0.1.0"
description = ""
authors = ["Atsushi Yoshida <aug7.a.yoshida@gmail.com>"]
readme = "README.md"
packages = [{include = "ttslearn", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
torch = "^2.2.1"
hydra-core = "^1.3.2"
numpy = "^1.26.4"
scipy = "^1.12.0"
pandas = "^2.2.1"
librosa = "^0.10.1"
mlflow = "^2.10.2"
pyopenjtalk = "^0.3.3"
pyworld = "^0.3.4"
nnmnkwii = "^0.1.2"
fire = "^0.5.0"
joblib = "^1.3.2"
scikit-learn = "^1.4.1.post1"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
jupyterlab-code-formatter = "^2.2.1"
pytest = "^8.0.2"
pre-commit = "^3.6.2"
flake8-pyproject = "^1.2.3"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
